# dbsavr

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
dbsavr/: __init__.py  api.py  backup_engine.py  backup_service.py  cli.py  config.py  notifications.py  scheduler_service.py  storage.py  tasks.py  version.py
examples/: celeryconfig.py.example  config.yaml.example
tests/: test_backup_engine.py  test_cli.py  test_config.py  test_notifications.py  test_storage.py
